# mpc_vrep_real_robot

./: .gitmodules  README.md  data_ctp.csv  data_high.csv  data_jp.csv  goal.csv
mpc_vrep/: data_dist.csv  data_human.csv  readme.md
mpc_vrep/src/human_vrep/src/: human_spheres.py
mpc_vrep/src/mpc_high/src/: move.cc
mpc_vrep/src/mpc_low/src/: move.cc  mpc_urscript.py
mpc_vrep/src/serial_comm/config/: config.yaml  elbow.yaml  shoulder.yaml  shoulder_x.yaml  shoulder_z.yaml  wrist_x.yaml
mpc_vrep/src/serial_comm/src/: batch_data.py  ref_move.py  serial_comm_gyro.cpp  tcpip_client.cpp
mpc_vrep/src/universal_robot/my_ur_control/ur10_traj_control/: CMakeLists.txt
mpc_vrep/src/universal_robot/ur_description/launch/: ur5_upload.launch  (+1 more)
src/human_vrep/: CMakeLists.txt
src/serial_comm/: simple_arm.ttt
src/serial_comm/config/: wrist_y.yaml  wrist_z.yaml
src/serial_comm/launch/: arm_world.launch  gazebo.launch  spawn_arm.launch  test.launch  test_socket.launch
src/serial_comm/msg/: Pos_Rot.msg  um7imu.msg
src/serial_comm/src/: controller_node.py  serial_comm.cpp  tcpip_server.cpp
src/universal_robot/my_ur_control/ur10_traj_control/: package.xml
src/universal_robot/my_ur_control/ur5_control/: CMakeLists.txt  package.xml
src/universal_robot/my_ur_control/ur5_traj_control/: CMakeLists.txt  package.xml
src/universal_robot/ur_description/launch/: ur5_upload_control_plugin.launch
src/universal_robot/ur_description/urdf/: common_control.gazebo.xacro  common_control_plugin.gazebo.xacro  ur5_control_plugin.urdf.xacro  ur5_robot_control_plugin.urdf.xacro
(+17 files in other folders)
